# tic_tac_toe

./: CMakeLists.txt  tic_tac_toe.cpp
include/: ai_player.hpp  ai_player_v1.hpp  ai_player_v2.hpp  ai_player_v3.hpp  ai_player_v4.hpp  ai_player_v5.hpp  ai_player_v6.hpp  game_board.hpp  game_session.hpp  human_player.hpp  perfect_player.hpp  tic_board.hpp  tic_game.hpp
nets/: ai_player_v3.net  ai_player_v4.net0  ai_player_v6.net0  ai_player_v6.net1  ai_player_v6.net2  ai_player_v6.net3  ai_player_v6.net4  ai_player_v6.net5  ai_player_v6.net6  ai_player_v6.net7  ai_player_v6.net8
